--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,21 +2,29 @@
 <html>
 <head>
 <title>Futurestaurant</title>
-<link
-	href="css/angular-bootstrap.css"
-	rel="stylesheet">
+<link href="css/angular-bootstrap.css" rel="stylesheet">
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
 	display: none !important;
 }
 </style>
+
 </head>
 
 <body ng-app="app" ng-cloak class="ng-cloak">
 	<div ng-controller="home" class="container">
-		{{some}}
+		<h1>Welcome to FutuRestaurant app!</h1>
+		<div class="row">
+			<div class="col-lg-4" ng-repeat="r in restaurants" >
+				<h2>{{r.id}}. {{r.name}}</h2>
+				<h3>{{r.type}}</h3>
+			</div>
+		</div>
+		<p id="footer"> Created by Daniel Piskorz in August 2017.</p>
 	</div>
+
 	<script src="js/angular-bootstrap.js" type="text/javascript"></script>
 	<script src="js/app.js"></script>
+
 </body>
 </html>
