--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -2,8 +2,9 @@
 	
 	<div class="card text-center col-lg-3 col-md-4 col-sm-6"
 				ng-repeat="r in restaurants">
-		<a href="/restaurant">
-		<img class="card-img-top img-fluid" id="photo" src="img/restaurant/photo/{{r.id % 2 + 1}}.jpg"  ng-click="setId(restaurants[$index].id)"/>
+		<a href="/#!/restaurant/{{r.id}}">
+		<img class="card-img-top img-fluid" id="photo" src="img/restaurant/photo/{{r.id % 2 + 1}}.jpg" 
+		 ng-click="setRestaurant(restaurants[$index])"/>
 				
 		<h4 class="card-title">{{r.name}}</h4>
 		<p class="card-text">{{r.description.shortDescription}}</p>
