Improved new-restaurant form, main color property.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,9 +14,9 @@
 
 <body ng-app="app" ng-cloak class="ng-cloak">
 	<div ng-controller="home" class="container">
-		<h1>Welcome to FutuRestaurant app!</h1>
+		<h2 class="text-center">Welcome to Futurestaurant app!</h2>
 		<div class="ng-view"></div>
-		<p id="footer">Created by Daniel Piskorz in August 2017.</p>
+		<p id="footer" class="text-center">Created by Daniel Piskorz in August 2017.</p>
 	</div>
 
 	<script src="js/angular-bootstrap.js" type="text/javascript"></script>
